--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        body {
+        .body1 {
             background: url('include/index.gif') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
             margin: 0;
+            overflow: hidden;
+        }
+        .body2 {
+            background: url('include/raz.gif') no-repeat center center fixed;
+            background-size: cover;
+            height: 100vh;
+            margin: 0;
+            overflow: hidden;
         }
 
         label {
@@ -57,16 +65,28 @@
             width: 100%;
             height: 400px;
             font-family: monospace;
-            background-color: #000;
+            background-color: #00000040;
             color: #0f0;
             border: none;
             resize: none;
             overflow: hidden;
         }
+
+
+        .container {
+            padding: 8%;
+        }
+
+        /* 當螢幕寬度大於等於 992px 時 */
+        @media (min-width: 992px) {
+            .container {
+                padding-top: 4%;
+            }
+        }
     </style>
 </head>
-<body>
-    <div class="container mt-1" style="padding: 10%">
+<body class="body1">
+    <div class="container mt-1">
         <div id="page1">
             <h2 class="text-center h2-text">☄️富遊DX6869會員專用☄️</h2>
             <hr>
@@ -228,6 +248,9 @@
         function check() {
             $('#page1').hide();
             $('#page2').show();
+
+            $('body').removeClass('body1');
+            $('body').addClass('body2');
             runLoadingBar();
         }
 
