--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 } else {
                     loadingBar.style.width = '100%';
                     loadingText.textContent = "100%";
-                    dataOutput.value += "\n[Inject Completed]";
+                    dataOutput.value += "\n[注入成功]";
                     dataOutput.scrollTop = dataOutput.scrollHeight;
                 }
             }
