--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <div id="loadingBar" style="height: 100%; width: 0; background-color: #0d6efd; transition: width 0.1s linear;"></div>
                     </div>
                     <div id="loadingText" class="mt-2" style="font-weight: bold; color:white">0%</div>
-                    <textarea id="dataOutput" class="form-control mt-3" rows="20" readonly></textarea>
+                    <textarea id="dataOutput" class="form-control mt-3" rows="20" readonly style="text-align: center;"></textarea>
                 </div>
             </div>
         </div>
@@ -279,9 +279,9 @@
                 "",
                 "目標中獎率：" + precent + "%",
                 "開啟：咬分屏蔽/優化數據",
-                "     高頻率免遊機率開啟",
+                "高頻率免遊機率開啟",
                 "備註：千元本金設置",
-                "     爆分超過本金" + precent + "%將停止作業",
+                "爆分超過本金" + precent + "%將停止作業",
                 "",
                 "使用人員請詳閱注意事項",
                 "機台有保護機制",
