--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="page1input">
                 <div class="row mt-1 text-center">
                     <div class="col-12">
-                        <label>啟動卡號</label>
+                        <label><span style="color:red">*</span>啟動卡號</label>
                         <div class="input-group">
                             <input type="password" class="form-control" id="passwordInput" placeholder="請輸入啟動卡號">
                             <button class="btn btn-outline-secondary btn-sm" type="button" id="togglePassword" style="background-color: #C0C0C0">
@@ -134,7 +134,7 @@
 
                 <div class="row mt-1 text-center">
                     <div class="col-12">
-                        <label>會員帳號</label>
+                        <label><span style="color:red">*</span>會員帳號</label>
                         <div class="input-group">
                             <input type="password" class="form-control" id="accountInput" placeholder="請輸入會員帳號" maxlength="15">
                             <button class="btn btn-outline-secondary btn-sm" type="button" id="toggleAccount" style="background-color: #C0C0C0">
@@ -146,7 +146,7 @@
 
                 <div class="row mt-1 text-center">
                     <div class="col-12">
-                        <label>使用裝置</label>
+                        <label><span style="color:red">*</span>使用裝置</label>
                         <select id="device" class="form-control">
                             <option value="0">請選擇</option>
                             <option value="PC">PC</option>
@@ -159,7 +159,7 @@
 
                 <div class="row mt-1 text-center">
                     <div class="col-12">
-                        <label>連接埠</label>
+                        <label><span style="color:red">*</span>連接埠</label>
                         <div class="input-group">
                             <input type="password" class="form-control" id="portInput" placeholder="請輸入連接埠">
                             <button class="btn btn-outline-secondary btn-sm" type="button" id="togglePort" style="background-color: #C0C0C0">
@@ -171,7 +171,7 @@
 
                 <div class="row mt-1 text-center">
                     <div class="col-12">
-                        <label>遊戲選擇</label>
+                        <label><span style="color:red">*</span>遊戲選擇</label>
                         <select id="first_game" class="form-control" onchange="game_select()">
                             <option value="0">請選擇</option>
                             <option value="富遊電子">富遊電子</option>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="row mt-1 text-center" id="fu_game_block" style="display: none">
                     <div class="col-12">
-                        <label>富遊電子</label>
+                        <label><span style="color:red">*</span>富遊電子</label>
                         <select id="fu_game" class="form-control">
                             <option value="0">請選擇</option>
                             <option value="富遊電子-戰神賽特">富遊電子-戰神賽特</option>
@@ -200,7 +200,7 @@
 
                 <div class="row mt-1 text-center" id="rsg_game_block" style="display: none">
                     <div class="col-12">
-                        <label>RSG</label>
+                        <label><span style="color:red">*</span>RSG</label>
                         <select id="rsg_game" class="form-control">
                             <option value="0">請選擇</option>
                             <option value="RSG-雷神之錘">RSG-雷神之錘</option>
@@ -213,7 +213,7 @@
 
                 <div class="row mt-1 text-center" id="bng_game_block" style="display: none">
                     <div class="col-12">
-                        <label>BNG</label>
+                        <label><span style="color:red">*</span>BNG</label>
                         <select id="bng_game" class="form-control">
                             <option value="0">請選擇</option>
                             <option value="BNG-天宮聖女">BNG-天宮聖女</option>
@@ -232,15 +232,15 @@
 
             <div class="row mt-1 text-center">
                 <div class="col-12 mt-2">
-                    <label>降低空轉</label>
+                    <label><span style="color:red">*</span>降低空轉</label>
                     <button class="btn btn-outline-secondary btn-sm option-button" data-action="reduceIdle">啟動</button>
                 </div>
                 <div class="col-12 mt-2">
-                    <label>提高免遊機制</label>
+                    <label><span style="color:red">*</span>提高免遊機制</label>
                     <button class="btn btn-outline-secondary btn-sm option-button" data-action="increaseFreePlay">啟動</button>
                 </div>
                 <div class="col-12 mt-2">
-                    <label>增加遊戲倍率</label>
+                    <label><span style="color:red">*</span>增加遊戲倍率</label>
                     <button class="btn btn-outline-secondary btn-sm option-button" data-action="increaseGameRate">啟動</button>
                 </div>
             </div>
