--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="row mt-2" id="fu_game_block3" style="display: none">
+                <div class="row mt-2 text-center" id="fu_game_block3" style="display: none">
                     <div class="col-12">
                         <label>富遊電子</label>
                         <select id="fu_game3" class="form-control" disabled>
@@ -349,7 +349,7 @@
                     </div>
                 </div>
 
-                <div class="row mt-2" id="rsg_game_block3" style="display: none">
+                <div class="row mt-2 text-center" id="rsg_game_block3" style="display: none">
                     <div class="col-12">
                         <label>RSG</label>
                         <select id="rsg_game3" class="form-control" disabled>
@@ -362,7 +362,7 @@
                     </div>
                 </div>
 
-                <div class="row mt-2" id="bng_game_block3" style="display: none">
+                <div class="row mt-2 text-center" id="bng_game_block3" style="display: none">
                     <div class="col-12">
                         <label>BNG</label>
                         <select id="bng_game3" class="form-control" disabled>
