--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                 </div>
             </div>
         </div>
-        <div id="page3" style="display: none;">
+        <div id="page3" style="display: none">
             <h2 class="text-center h2-text">☄️富遊DX6869會員專用☄️</h2>
-
+            <br>
             <h3 class="text-center h2-text">運行中</h3>
 
             <div class="page1input">
@@ -389,19 +389,19 @@
                </div>
            </div>
 
-           <div class="row mt-3 text-center">
+           <div class="row mt-2 text-center">
                <div class="col-12">
-                   <p class="blinking-warning">
+                   <label class="blinking-warning">
                        ⚠️網頁請不要關閉或刷新⚠️ 
-                   </p>
+                   </label>
                    <br>
-                   <p class="blinking-warning">
+                   <label class="blinking-warning">
                         導致失效自行負責
-                    </p>
+                    </label>
                </div>
            </div>
 
-           <div class="row mt-3 text-center">
+           <div class="row mt-4 text-center">
                <div class="col-12">
                    <h2 class="blinking-text fw-bold">優化數據中...</h2>
                </div>
